# otameshi-android

./: README.md  build.gradle  settings.gradle
app/: build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
client_stub/: README.md  build.gradle
client_stub/src/main/: AndroidManifest.xml
client_stub/src/main/proto/: hello.proto
common/: build.gradle
common/src/main/: AndroidManifest.xml
fcm_cli/: index.js  package-lock.json  package.json
feature/awsiot-client/: .gitignore  build.gradle
feature/awsiot-client/src/main/: AndroidManifest.xml
feature/fcm-client/: build.gradle
feature/fcm-client/src/main/: AndroidManifest.xml
feature/grpc-client/: README.md  build.gradle
feature/grpc-client/src/main/: AndroidManifest.xml
feature/myaidl-client/: build.gradle
feature/myaidl-client/src/main/: AndroidManifest.xml
feature/myopengles/: build.gradle
feature/myopengles/src/main/: AndroidManifest.xml
feature/myopengles/src/main/cpp/: CMakeLists.txt  GLApp.cpp  GLApp.h  NDKApplication.cpp  sample.h  sample1.cpp  support.c  support.h
feature/myopengles/src/main/cpp/gl/: GLApp.h  sample.h  sample1.c  sample1.cpp  sample2.c  sample3.c  sample4.c  sample5.c  sample_helper.c  sample_helper.cpp  sample_helper.h
feature/myopengles/src/main/cpp/jni/: JniApplication.c  JniApplication.cpp  gl_helper.c  support.c  support.h  texture_helper.c
gradle/wrapper/: gradle-wrapper.properties
myaidl-service-app/: build.gradle
myaidl-service-app/src/main/: AndroidManifest.xml
(+93 files in other folders)
